video tag z-index fix

--- a/src/styles/_includes/_elements.scss
+++ b/src/styles/_includes/_elements.scss
@@ -307,6 +307,7 @@ article.main-article > figure {
 .has-background-test {
   background-color: #2a68aa;
   background-image: linear-gradient(#14283d 0%,#14487d 16%,#2a68aa 57%,#f1f1f1 100%);
+  background-image: url('https://svgshare.com/i/2x3.svg');
   background-image: url('../files/img/testowe_tlo.svg');
   background-position: bottom;
   background-repeat: no-repeat;
